Bomb Numbers